content/pt-br/devops/kubernetes/ckad/7-Services_&_Networking/ingress-wear-watch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-wear-watch
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /wear
            backend:              
              service:
                name: wear-service
                port:
                  number: 80          
          - pathType: Prefix
            path: /watch
            backend:              
              service:
                name: watch-service
                port:
                  number: 80
