content/pt-br/devops/kubernetes/ckad/7-Services_&_Networking/ingress-wear.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-wear
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix ### (Prefix|Exact|Mixed)
            path: /wear
            backend:
              service:
                name: wear-service
                port:
                  number: 80
