content/pt-br/devops/kubernetes/ckad/7-Services_&_Networking/db-policy-2.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-policy
spec:
  podSelector:
    matchLabels:
      role: db
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
      - podSelector:
         matchLabels:
           name: api-pod
      ports:
        - protocol: TCP
          port: 3306
  egress:
    - to:          
      - ipBlock:
         cidr: 192.168.5.10/32
      ports:
        - protocol: TCP
          port: 80
