content/pt-br/devops/kubernetes/ckad/7-Services_&_Networking/db-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-policy
spec:
  podSelector:
    matchLabels:
      role: db
  policyTypes:
    - Ingress
  ingress:
    - from:
      - podSelector: ## rule 1
         matchLabels:
           name: api-pod
        namespaceSelector:
          matchLabels:
            name: prod
      # - namespaceSelector: ## possible 2 rule
      #     matchLabels:
      #       name: prod
      - ipBlock: ## rule 2
         cidr: 192.168.5.10/32

      ports:
        - protocol: TCP
          port: 3306
