content/pt-br/devops/kubernetes/ckad/7-Services_&_Networking/internal-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: internal-policy
spec:
  podSelector:
    matchLabels:
      role: internal
  policyTypes:
    - Egress
  egress:
    - to:          
      - podSelector:
         matchLabels:
           name: payroll
      ports:
        - protocol: TCP
          port: 8080
    - to:          
      - podSelector:
         matchLabels:
           name: mysql
      ports:
        - protocol: TCP
          port: 3306        
    - ports:
      - port: 53
        protocol: UDP
      - port: 53
        protocol: TCP
